--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react_sharepoint",
   "version": "0.1.0",
+  "homepage": "https://chuongthai885.github.io/ReactSharePoint/",
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.0.18",
@@ -16,6 +17,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -41,6 +44,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.15",
     "clsx": "^2.0.0",
+    "gh-pages": "^6.0.0",
     "postcss": "^8.4.29",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.3.3"
